Fix: URL decode in HTTP proxy, independent SMB context for scanner, increased timeout